tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__VisittheFieryIsl-AAAAAAAAAAAAAAAAAAAJOA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2360,
  "prerequisites": [
    2355
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Fire-oriented biome with huge mountains and a large amount of caves and ores. Apart from default ores, this biome also has common Igneous Rock ore. There are 2 variations of the biome - Scorching and Mine.\n\nThe Scorching variation has large blobs of cinder, streams and pools of Lava and Lilyfires. This is the only place where Fire Golems and Scorching Lenses spawn. Each island can contain a Dungeon Puzzle.\n\nThe Mine variation spawns Haunted Miners, which protect Resource Pits (holes with ores from the End and Lava) and long patches of Overworld ores. Not all Overworld ores are present on a single island, usually one or two random ores are missing.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Visit the Fiery Island",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2355
  ],
  "rewards": [],
  "tasks": []
}
