tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__VisittheInfested-AAAAAAAAAAAAAAAAAAAJNw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2359,
  "prerequisites": [
    2355,
    2361
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Infested Islands are mostly a flat biome with occasional hills, long caves and decent amount of ores. There are 2 variations of the biome - Deep and Ravaged. Both of these variations contain Silverfish, Infested Bats and occasionally Endermen.\n\nThe Deep variation is massively populated with Spooky Trees that can have faces on them. The ground has all types of infested plants, including Thorny Bushes.\n\nThe Ravaged variation has patches of infested plants and occasional Spooky Trees, but the most important feature is the Ravaged Dungeon which is an open gate to the Charms.\n\nAbout Infestation:\nSimply by standing on the End Stone Terrain, the infestation level will rise. After leaving the area for several minutes, if the infestation level is low, it will reset and won't do any harm to the player.\n\nHowever, if the infestation level gets high enough, it will trigger one or more potion effects, which include weakness, slowness and mining fatigue, and if the player's level is severe, blindness, confusion and/or poison may take place as well. These effects cannot be cured using milk, you can however drink Infestation Remedy to shorten them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Visit the Infested Island",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2355,
    2361
  ],
  "rewards": [],
  "tasks": []
}
