tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__WelcometotheEnd-AAAAAAAAAAAAAAAAAAAJLg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2350,
  "prerequisites": [
    986
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Welcome to the End! And more importantly, Hardcore Ender Expansion.\n\nIf you've already fought the Ender Dragon, you'll have noticed that the fight itself was challenging, far more than usual. As well as much of the island getting destroyed, but have no worry, there are plenty of end blobs out there for you to gather ore or endstone from.\n\nFirst, you will want to gather some end powder, a key catalyst for most of HEE. Any means of flight is also highly recommended.\n\nHint: Press the P key (unless you rebound it) for a key list of information about HEE related stuff. Once you've looked through it you'll realize you need knowledge in order to unlock pages. Looking at blocks or items or certain things will also grant you knowledge. Consuming Knowledge Notes will also grant you knowledge points. Here are some for you to get started on. Good luck!\n\nYou can also search for the Adventurer's Diary for some lore if you want.\n\n[note]PS: Hold shift and whack the egg with a vanilla sword to get it to drop.[/note]\n\n[warn]The End has invisible rain, cover up your miners, and then complain on discord.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Welcome to the End!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    986
  ],
  "rewards": [],
  "tasks": []
}
